; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-skynet.c_traceback.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-skynet.c_traceback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"(no error message)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @traceback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @traceback(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i8* @lua_tostring(i32* %4, i32 1)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @luaL_traceback(i32* %9, i32* %10, i8* %11, i32 1)
  br label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @lua_pushliteral(i32* %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %8
  ret i32 1
}

declare dso_local i8* @lua_tostring(i32*, i32) #1

declare dso_local i32 @luaL_traceback(i32*, i32*, i8*, i32) #1

declare dso_local i32 @lua_pushliteral(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
